k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: paystream
  labels:
    app: auth-service
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: authorization
    app.kubernetes.io/part-of: paystream
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-stable
  namespace: paystream
  labels:
    app: auth-service
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: authorization
    app.kubernetes.io/part-of: paystream
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-canary
  namespace: paystream
  labels:
    app: auth-service
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: authorization
    app.kubernetes.io/part-of: paystream
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
